--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable"
-GOOGLE_CLIENT_ID="your-google-client-id"
-GOOGLE_CLIENT_SECRET="your-google-client-secret"
-SESSION_SECRET="reallysecuresecret"
+DATABASE_URL=file:../data/data.db?connection_limit=1
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+SESSION_SECRET=reallysecuresecret
