--- a/package.json
+++ b/package.json
@@ -12,41 +12,13 @@
     "seed": "prisma db seed",
     "format": "prettier -c --ignore-path .gitignore '**/*.ts'",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint app/**/*.{ts,tsx}",
-    "test": "vitest",
-    "test:run": "vitest run",
     "typecheck": "tsc",
-    "validate": "run-p test:run lint typecheck"
+    "validate": "run-p lint typecheck"
   },
   "dependencies": {
-    "@conform-to/react": "0.8.0",
-    "@conform-to/zod": "0.8.0",
     "@prisma/client": "5.1.1",
-    "@radix-ui/react-accordion": "1.1.2",
-    "@radix-ui/react-alert-dialog": "1.0.4",
-    "@radix-ui/react-aspect-ratio": "1.0.3",
-    "@radix-ui/react-avatar": "1.0.3",
-    "@radix-ui/react-checkbox": "1.0.4",
-    "@radix-ui/react-collapsible": "1.0.3",
-    "@radix-ui/react-context-menu": "2.1.4",
     "@radix-ui/react-dialog": "1.0.4",
-    "@radix-ui/react-dropdown-menu": "2.0.5",
-    "@radix-ui/react-hover-card": "1.0.6",
-    "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-menubar": "1.0.3",
-    "@radix-ui/react-navigation-menu": "1.1.3",
-    "@radix-ui/react-popover": "1.0.6",
-    "@radix-ui/react-progress": "1.0.3",
-    "@radix-ui/react-radio-group": "1.1.3",
-    "@radix-ui/react-scroll-area": "1.0.4",
-    "@radix-ui/react-select": "1.2.2",
-    "@radix-ui/react-separator": "1.0.3",
-    "@radix-ui/react-slider": "1.1.2",
     "@radix-ui/react-slot": "1.0.2",
-    "@radix-ui/react-switch": "1.0.3",
-    "@radix-ui/react-tabs": "1.0.4",
-    "@radix-ui/react-toast": "1.1.4",
-    "@radix-ui/react-toggle": "1.0.3",
-    "@radix-ui/react-tooltip": "1.0.6",
     "@remix-run/node": "1.19.3",
     "@remix-run/react": "1.19.3",
     "@remix-run/serve": "1.19.3",
@@ -58,42 +30,25 @@
     "isbot": "3.6.13",
     "lucide-react": "0.268.0",
     "react": "18.2.0",
-    "react-day-picker": "8.8.1",
     "react-dom": "18.2.0",
-    "remix-auth": "3.5.1",
-    "remix-auth-google": "1.2.0",
-    "remix-auth-oauth2": "1.8.0",
     "remix-island": "0.1.2",
-    "remix-typedjson": "0.2.0",
-    "remix-utils": "6.6.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.6",
     "tiny-invariant": "1.3.1",
-    "ts-pattern": "5.0.5",
     "zod": "3.22.2",
     "zodix": "0.4.1"
   },
   "devDependencies": {
     "@remix-run/dev": "1.19.3",
     "@remix-run/eslint-config": "1.19.3",
-    "@testing-library/dom": "9.3.1",
-    "@testing-library/jest-dom": "6.0.1",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/compression": "1.7.2",
     "@types/eslint": "8.44.2",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/parser": "6.4.0",
-    "@vitejs/plugin-react": "4.0.4",
-    "@vitest/coverage-v8": "0.34.2",
-    "esbuild": "0.19.2",
     "eslint": "8.47.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-testing-library": "6.0.0",
-    "jsdom": "22.1.0",
-    "msw": "1.2.3",
     "npm-run-all": "4.1.5",
     "prettier": "3.0.2",
     "prettier-plugin-organize-imports": "3.2.3",
@@ -103,10 +58,7 @@
     "tailwindcss": "3.3.3",
     "tsconfig-paths": "4.2.0",
     "tsx": "3.12.7",
-    "typescript": "5.1.6",
-    "vite": "4.4.9",
-    "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.34.2"
+    "typescript": "5.1.6"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
